--- a/test_package/CMakeLists.txt
+++ b/test_package/CMakeLists.txt
@@ -3,6 +3,8 @@ cmake_minimum_required(VERSION 2.8.11)
 
 set(CMAKE_VERBOSE_MAKEFILE TRUE)
 
+file(COPY beer_journal.xml DESTINATION ${CMAKE_BINARY_DIR})
+
 include(${CMAKE_BINARY_DIR}/conanbuildinfo.cmake)
 conan_basic_setup()
 
